网络错误弹窗提示

--- a/templates/ddiu.html
+++ b/templates/ddiu.html
@@ -719,7 +719,7 @@
             })
                 .then(response => {
                     if (!response.ok) {
-                        throw new Error('Network response was not ok');
+                        throw new Error(`status: ${response.status}, ${response.statusText}: Network response was not ok`);
                     }
                     return response.json();
                 })
@@ -821,6 +821,7 @@
                 })
                 .catch(error => {
                     console.error('There has been a problem with your fetch operation:', error);
+                    alert('请求失败：' + error.message);
                 });
         };
 
