--- a/templates/bulma.html
+++ b/templates/bulma.html
@@ -759,7 +759,7 @@
                 })
                     .then(response => {
                         if (!response.ok) {
-                            throw new Error('Network response was not ok');
+                            throw new Error(`status: ${response.status}, ${response.statusText}: Network response was not ok`);
                         }
                         return response.json();
                     })
@@ -861,6 +861,7 @@
                     })
                     .catch(error => {
                         console.error('There has been a problem with your fetch operation:', error);
+                        alert('请求失败：' + error.message);
                     });
             };
 
